# back-end/src/main/java/br/com/dental_care/controller/AuthController.java
@@ -1,19 +1,21 @@
 package br.com.dental_care.controller;
 
-import br.com.dental_care.dto.EmailDTO;
-import br.com.dental_care.dto.PatientDTO;
-import br.com.dental_care.service.AuthService;
-import io.swagger.v3.oas.annotations.tags.Tag;
-import jakarta.validation.Valid;
-import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import br.com.dental_care.dto.EmailDTO;
+import br.com.dental_care.dto.NewPasswordDTO;
+import br.com.dental_care.dto.PatientDTO;
+import br.com.dental_care.service.AuthService;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 
 @RestController
 @RequestMapping("/auth")
@@ -34,6 +36,13 @@ public class AuthController {
     public ResponseEntity<Void> createRecoverToken(@Valid @RequestBody EmailDTO body) {
         logger.info("Starting token generation process for password recovery");
         authService.createRecoverToken(body);
+        return ResponseEntity.noContent().build();
+    }
+
+    @PutMapping(path = "/new-password")
+    public ResponseEntity<Void> saveNewPassword(@Valid @RequestBody NewPasswordDTO dto) {
+        logger.info("Initiating reset password process");
+        authService.saveNewPassword(dto);
         return ResponseEntity.noContent().build();
     }
 }
