# back-end/src/main/java/br/com/dental_care/dto/NewPasswordDTO.java
@@ -1,0 +1,24 @@
+package br.com.dental_care.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Pattern;
+import jakarta.validation.constraints.Size;
+import lombok.Builder;
+import lombok.Getter;
+
+@Getter
+@Builder
+public class NewPasswordDTO {
+
+    @NotBlank(message = "Token is required")
+    private String token;
+
+    @NotBlank(message = "Password is required")
+    @Size(min = 6, max = 20, message = "Password must be between 6 and 20 characters.")
+    @Pattern(regexp = ".*[A-Z].*", message = "Password must contain at least one uppercase letter.")
+    @Pattern(regexp = ".*[a-z].*", message = "Password must contain at least one lowercase letter.")
+    @Pattern(regexp = ".*[0-9].*", message = "Password must contain at least one number.")
+    @Pattern(regexp = ".*[!@#$%^&*(),.?\":{}|<>].*", message = "Password must contain at least one special character.")
+    private String password;
+
+}
